--- a/style.css
+++ b/style.css
@@ -44,9 +44,8 @@ a {
   }
 
 .left-column {
-  /* flex: 0 0 250px; */
-  flex: 1;
-  justify-content: center;
+  flex: 0 0 250px;
+  /* background: yellow; */
   }
 
 .left-column img{
@@ -54,25 +53,32 @@ a {
   justify-content: center;
   }
 
+.left-top-article {
+  margin: 2px;
+  padding: 5px;
+  }
+
 .main-column {
-  flex: 5;
+  flex: 2;
+  flex-shrink: 1;
   background: #c0d6ba;
   }
 
-.main-top-article {
+.main-first-article {
   flex-direction: row;
   }
 
-.main-top-article .article-body {
+.main-first-article .article-body {
   flex: 1;
+  flex-shrink: 1;
   }
 
 .nested-column {
-  flex: 3;
+  /* flex: 2; */
   }
 
 .article {
-  flex: 1; /* Stretches articles to fill remaining space */
+  flex-shrink: 1; /* Stretches articles to fill remaining space */
   flex-direction: column;
   /* flex-basis: auto; */ /* sets initial element size based on its contents */
   /* border: 5px; */
@@ -83,12 +89,14 @@ a {
 
 .article-body {
   display: flex;
-  flex: 1;
+  /*flex: 1;*/
   flex-direction: column;
   /* background: white; */
   /* border: 5px; */
   margin: 2px;
   padding: 5px;
+  align-items: center;
+  align-content: center;
   }
 
 .article-content {
@@ -96,6 +104,16 @@ a {
   /* This will make the content fill up the remaining space,
      and thus push the information bar at the bottom
   */
+  }
+
+
+.article-image-profile img {
+  justify-content: center;
+  align: center;
+  }
+
+.article-image-nested img {
+  max-width: 350px;
   }
 
 @media screen and (min-width: 768px) {
@@ -106,15 +124,15 @@ a {
   }
 
 @media screen and (min-width: 1200px) {
-  .main-top-article {
+  .main-first-article {
     flex-direction: row;
     }
 
-  .main-top-article .article-body {
+  .main-first-article .article-body {
     flex: 1;
     }
 
-  .main-top-article .article-image {
+  .main-first-article .article-image {
     height: 300px
     order: 2;
     padding-top: 0;
